--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -76,3 +76,16 @@ body{
 .modal-dialog{
     width:700px;
 }
+
+.carousel {
+    background:#1A237E;
+}
+.carousel .item {
+  height: 300px;
+}
+.item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
